--- a/_quarto.yml
+++ b/_quarto.yml
@@ -71,19 +71,23 @@ format:
         title: "Example"
         numbered: true
         counter-depth: 2
-        
+ 
   pdf:
-    pdf-engine: xelatex  # or lualatex
+    pdf-engine: xelatex # or lualatex
     documentclass: svmono
-    mainfont: "Palatino"    #"TeX Gyre Pagella"
-    monofont: "Inconsolata" #"Fira Code"
-    # monofontoptions: "Scale=MatchLowercase"
+    mainfont: "Palatino"
+    monofont: "Inconsolata"
     code-block: true
     code-block-font-size: 7pt
     include-in-header: template.tex
     number-sections: true
     toc: true
     keep-tex: true
+    theorem-environments:
+      - name: example
+        title: "Example"
+        numbered: true
+        counter-depth: 2
     callout-definitions:
       example:
         title: "Example"
