--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,27 +8,27 @@ project:
     - "*.qmd"
 
 book:
-  title: "Data Science Foundations and Machine Learning with R: From Data to Decisions"
-  author: "[<span style='color:gray'>Reza Mohammadi</span>](https://www.uva.nl/profile/a.mohammadi)"
+  title: "<span style='color:#0056B3'>Data Science Foundations and Machine Learning with R: From Data to Decisions</span>"
+  author: "[<span style='color:#0056B3'>Reza Mohammadi</span>](https://www.uva.nl/profile/a.mohammadi)"
   date: today
   date-format: "D MMMM YYYY"
   reader-mode: true
 
   page-footer:
     left: |
-      Data Science Foundations and Machine Learning with R was written by [<span style='color:gray'>Reza Mohammadi</span>](https://www.uva.nl/profile/a.mohammadi).
+      Data Science Foundations and Machine Learning with R was written by [<span style='color:#0056B3'>Reza Mohammadi</span>](https://www.uva.nl/profile/a.mohammadi).
     right: |
       This book was built with <a href="https://quarto.org/">Quarto</a>.
 
   search: true
   cover-image: images/logo.png
   favicon: images/logo.png
-  site-url: https://uncovering-data-science.netlify.app
-  repo-url: https://github.com/RezaMoammadi/Book-Data-Science
+  site-url: https://book-data-science-r.netlify.app
+  repo-url: https://github.com/RezaMoammadi/Book-Data-Science-R
   repo-branch: main
   repo-actions: [edit, issue]
   downloads: [pdf, epub]
-  sharing: [twitter, linkedin, facebook]
+  sharing: [linkedin, twitter, facebook]
   
   sidebar:
     search: true
