--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,8 @@ project:
   preview:
     port: 5896
     browser: true
-  render:
-    - "*.qmd"
+#  render:
+#    - "*.qmd"
 
 book:
   title: "<span style='color:#0056B3'>Data Science Foundations and Machine Learning with R: From Data to Decisions</span>"
